--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -1407,7 +1407,7 @@
      "text": [
       "['bromidic', 'hide', 'winters', 'conjecture', 'cobia', 'muscadel', 'nonparty', 'tinselry', 'mulier', 'spitz', 'humphrey', 'blab', 'accede', 'communicable', 'malthusian', 'fumigator', 'insociable', 'vaward', 'centre', 'dignify']\n",
       "['o', 'e', 'e', 'o', 'o', 'o', 'e', 'o', 'e', 'o', 'e', 'o', 'o', 'ee', 'e', 'ee', 'oo', 'o', 'o', 'e']\n",
-      "({'e', 'o', 'ee', 'oo'}, 1.0)\n"
+      "0.0\n"
      ]
     }
    ],
@@ -1422,35 +1422,23 @@
     "dict_list = dict_file.split(\"\\n\")\n",
     "\n",
     "a_dict = set(codecs.open(\"words_alpha.txt\", \"r\", \"utf-8-sig\").read().replace(\"\\r\", \"\").split(\"\\n\"))\n",
-    "# b_write = codecs.open(dict_filename, \"w\", \"utf-8-sig\")\n",
+    "\n",
     "err = set(codecs.open(err_filename, \"r\", \"utf-8-sig\").read().replace(\"\\r\", \"\").split(\"\\n\"))\n",
     "\n",
     "new_dict_set = list(a_dict - err)  # Subtract the set of errors from the beta dictionary\n",
     "\n",
     "spellcheck = SpellChecker().correction\n",
     "\n",
-    "trues, preds = get_true_pred_lists(mini_test, model)\n",
-    "print(trues)\n",
-    "print(preds)\n",
+    "trues, preds = get_true_pred_lists(test, model)\n",
     "\n",
-    "def spellcheck_all(str_list, correct_list):\n",
-    "    new_dict = [None] * len(str_list)\n",
-    "    total_equal = 0\n",
-    "    str_list = list(str_list)\n",
+    "def get_0_1_accuracy_with_spellcheck(trues, preds):\n",
+    "    correct = 0\n",
+    "    for (true, pred) in zip(trues, preds):\n",
+    "        if true == pred or spellcheck(pred) == true:\n",
+    "            correct+=1\n",
+    "    return correct / len(trues)\n",
     "\n",
-    "    for i in range(len(str_list)):\n",
-    "        if not str_list[i] in a_dict:\n",
-    "            new_dict[i] = (spellcheck(\"\".join(str_list[i])))\n",
-    "        else:\n",
-    "            new_dict[i] = str_list[i]\n",
-    "\n",
-    "        if new_dict[i] == str_list[i]:\n",
-    "            total_equal += 1\n",
-    "    \n",
-    "    difference = set(new_dict) - set(correct_list)\n",
-    "    return (difference, total_equal/len(str_list))\n",
-    "\n",
-    "print(str(spellcheck_all(preds, trues)))"
+    "print(get_0_1_accuracy_with_spellcheck(preds, trues))"
    ]
   },
   {
