Added spellcheck portions to spellcheck

--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -1162,16 +1162,36 @@
     "\n",
     "spellcheck = SpellChecker().correction\n",
     "\n",
+    "# Only spell check incorrect strings\n",
+    "def spellcheck_1(string):\n",
+    "    spellchecked = string\n",
+    "\n",
+    "    # Check if the presented string is in the list of known words\n",
+    "    if not string in a_dict:\n",
+    "        # Attempt to autocorrect the word\n",
+    "        spellchecked = spellcheck(\"\".join(string))\n",
+    "        print(\"new_word: \" + spellchecked)\n",
+    "    return spellchecked\n",
+    "\n",
     "trues, preds = get_true_pred_lists(test, model)\n",
+    "\n",
+    "def spellcheck_all(str_list):\n",
+    "    new_list = [None] * len(str_list)\n",
+    "    str_list = list(str_list)\n",
+    "\n",
+    "    for i in range(len(str_list)):\n",
+    "        new_list[i] = spellcheck_1(str_list[i])\n",
+    "\n",
+    "    print(\"original list: \" + str(new_list))\n",
+    "    return new_list\n",
     "\n",
     "def get_0_1_accuracy_with_spellcheck(trues, preds):\n",
     "    \"\"\"compute 0 1 accuracy, but using spell check\"\"\"\n",
     "    correct = 0\n",
     "    for (true, pred) in zip(trues, preds):\n",
-    "        if true == pred or spellcheck(pred) == true:\n",
+    "        if spellcheck_1(pred) == true:\n",
     "            correct+=1\n",
-    "    return correct / len(trues)\n",
-    "\n"
+    "    return correct / len(trues)"
    ]
   },
   {
@@ -1185,7 +1205,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(get_0_1_accuracy_with_spellcheck(preds, trues))"
+    "print(get_0_1_accuracy_with_spellcheck(preds, trues))\n",
+    "print(spellcheck_all(preds))"
    ]
   },
   {
