--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -113,12 +113,13 @@
    },
    "source": [
     "### Initialize key variables\n",
-    "In order to tailer this file to meet the unique needs of users, we coded several main\n",
-    "variablesthat can be interchanged between users. These variables include: website to scrape, the base URL, their list\n",
+    "In order to tailor this file to meet the unique needs of users, we coded several main\n",
+    "variables, which can be interchanged between users with varying needs. These variables include: website to scrape, the\n",
+    "base URL, their list\n",
     " of words to find on the\n",
     "website, a\n",
-    "list of all known words with no pages or broken phonetics, the number of words to find, and a list of words that have\n",
-    " not yet been attempted."
+    "list of all known words with no pages or broken phonetics, the number of words to find, and a list of words that remain\n",
+    " to be requested."
    ]
   },
   {
@@ -192,7 +193,13 @@
     "collapsed": false
    },
    "source": [
-    "### Declare key functions and then run the code to acquire the phonetics efficiently"
+    "### Declare key functions and then run the code to acquire the phonetics efficiently\n",
+    "\n",
+    "This section utilizes several functions with independent functionality. We needed a method to interchange URLs with\n",
+    "the  random words from our list of known words. Thankfully, the dictionary websites used the word within the URL\n",
+    "string  to direct to the word's webpage. As a result, we only needed to interchange that section of the URL string to\n",
+    " obtain the phonetics of new words. To increase the speed of data collection, we request up to 20 URLs at a time\n",
+    " using concurrency."
    ]
   },
   {
@@ -328,8 +335,32 @@
     "        if fut.exception() is not None:\n",
     "            print('{}: {}'.format(fut.exception(), 'ERR'))\n",
     "        else:\n",
-    "            print('{}: {}'.format(fut.result(), 'OK'))\n",
+    "            print('{}: {}'.format(fut.result(), 'OK'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Clean the data we currently have\n",
     "\n",
+    "Remove_invailds() is an important function that cleans the data acquired to assure that only correct data is passed to the model. To accomplish this, there were various symbols and frequent words that\n",
+    " appeared to accompany other words and we were able to eliminate them using regex, manual removal, null filtering,\n",
+    " and excluding words that differ by, at most, 3 characters to eliminate most unforeseen and uncommon problems based\n",
+    " on length alone. The number \"3\" was chosen because there are not many commonly used words\n",
+    " below 4 letters that could appear before phonetics on those dictionary websites. However, we expect a small percentage of data to be removed in order to create a hard margin of error with a negligible chance of including incorrect phonetics."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "\"\"\"\n",
     "This function removes any invalid characters, words, repeat elements, and fixes the formatting of words,\n",
     "accounts for edge cases, and fixes as much data as it can before writing it to the file or removing the data\n",
@@ -450,9 +481,37 @@
     "    dict_list = list((set(dict_list) - curr_words) - err) # Update the global list of remaining words\n",
     "    return final_set # Return the set of words remaining in the phonemes-words csv\n",
     "\n",
-    "times_phon_was_run = 0 # Numebr of times the phon function was run.\n",
-    "\n",
-    "\n",
+    "times_phon_was_run = 0 # Numebr of times the phon function was run."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Running the above functions to acquire data\n",
+    "Now that we have established our main functions, we needed to create an efficient way of acquiring more words since\n",
+    "using the same list of words would result in repeat attempts eventually. To accomplish this, we used phon to update\n",
+    "the dictionary every 1000 words by running the \"remove_invalids()\" function, which cleans the data and removes bad\n",
+    "words from the words_beta list. Then we simply needed to continuously run the phon function until the target number\n",
+    "of correct words is reached. "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "\"\"\"\n",
     "The main key function used to request and process size number of word-phonetics.\n",
     "This function will only be called once every time \"size\" has been reached.\n",
@@ -520,7 +579,13 @@
     "# Close out the file\n",
     "b_write.close()\n",
     "err_write.close()"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
