Autocorrect added, paragraphs added/updated

--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -54,7 +54,13 @@
    },
    "source": [
     "### Our Project\n",
-    "Our project aims to predict graphemes from phonemes. After our project completes, the next step is to map audio to phonemes, which would allow a speaker to say any English word that has phonetics and have the model produce a word spelled the way the word sounds. If the model outputs incorrect results, we believe that a robust autocorrect library would often correct the attempted word into the correct word. As a result, we believe that converting phonemes to graphemes is a step towards technology having an enhanced ability to recognize speech and produce text that closely resembles the phonetics of speech, providing enhanced communication between users and computational devices and evolution of communication.\n",
+    "Our project aims to predict graphemes from phonemes. After our project completes, the next step is to map audio to\n",
+    "phonemes, which would allow a speaker to say any English word that has phonetics and have the model produce a word\n",
+    "spelled the way the word sounds. If the model outputs incorrect results, we believe that a robust autocorrect library\n",
+    " would often correct the attempted word into the correct word. As a result, we believe that converting phonemes to\n",
+    " graphemes is a step towards technology having an enhanced ability to recognize speech and produce text that closely\n",
+    " resembles the phonetics of speech, providing enhanced communication between users and computational devices,\n",
+    " creating another evolution of human-computer communication.\n",
     "\n",
     "### Webscraping and Cleaning Phonetics\n",
     "We chose to web scrape phonetics from two web sources: merriam-webster.com and dictionary.com. However, we attempted\n",
@@ -64,7 +70,9 @@
     "collection. Unfortunately, the structure of the phonetics section of the web pages was not entirely consistent across\n",
     " different words. This inconsistency required us to write code that handled various new edge cases to confirm that\n",
     " our CSV (comma-separated values file) would only contain correct data. We initially used synchronous methods of\n",
-    " acquiring data. However, concurrency reduced the program runtime by nearly 75%, as determined by runtime logging. The performance increase allows users to collect data significantly faster, allowing for a larger dataset better finetuning of our model. As a result, we acquired over 78,000 word-phonetic combinations for use with our model."
+    " acquiring data. However, concurrency reduced the program runtime by nearly 75%, as determined by runtime logging.\n",
+    " The performance increase allows users to collect data significantly faster, allowing for a larger dataset to better\n",
+    " finetune models. As a result, we acquired over 78,000 word-phonetic combinations for use with our model."
    ]
   },
   {
@@ -498,7 +506,7 @@
     "using the same list of words would result in repeat attempts eventually. To accomplish this, we used phon to update\n",
     "the dictionary every 1000 words by running the \"remove_invalids()\" function, which cleans the data and removes bad\n",
     "words from the words_beta list. Then we simply needed to continuously run the phon function until the target number\n",
-    "of correct words is reached. "
+    "of correct words is reached."
    ],
    "metadata": {
     "collapsed": false,
