Documented the data-gathering code

--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -159,9 +159,9 @@
     "curr_words = []\n",
     "dict_len = len(dict_list)\n",
     "\n",
-    "# Regex required to remove various characters from webscraped strings.\n",
+    "# Regex required to remove various characters from webscraped strings, cannot use \\w since there are non letter chars.\n",
     "regex = r\"( |\\n([a-z][A-Z])*\\n|\\'|\\[|\\]|ˈ|\\+|\\\"|\\(\" \\\n",
-    "        r\"|\\)|ˌ||-|͟|¦|\\||‧|͟|&|1|2|–|—|͟|‧|;|pronunciationat|\\r|\\\\|\\/|for\\d*|\\d)*\"\n",
+    "        r\"|\\)|ˌ||-|͟|¦|\\||‧|͟|&|–|—|͟|‧|;|pronunciationat|\\r|\\\\|\\/|for\\d*|\\d)*\"\n",
     "to_replace = r\"^noun |^pronoun |^verb |^adjective |^adverb |^preposition |^conjunction |^interjection \"\n",
     "\n",
     "write_file = \"phonemes-words.csv\"  # The file to write phoneme-words to\n",
@@ -210,8 +210,15 @@
    "outputs": [],
    "source": [
     "start_time = time.time()\n",
-    "# This is the main function to get the urls of size \"size\", returns a list of urls pointing dictionary words+phonetics\n",
+    "\n",
     "def get_urls(size):\n",
+    "    \"\"\"\n",
+    "    This is the main function to get the urls of size \"size\", returns a list of urls pointing dictionary words+phonetics\n",
+    "\n",
+    "    :param size: the number of unique urls to create using the words_beta words list\n",
+    "    :type size: int\n",
+    "    :return: set of unique URLs with names\n",
+    "    \"\"\"\n",
     "    global dict_list\n",
     "    empty_set = set([None])  # Empty set used to remove empty sets from lists\n",
     "    urls = [None] * size  # Indexing the urls using iterators is around 25% faster than appending\n",
@@ -239,10 +246,18 @@
     "\n",
     "total_failed = 0  # Uses this variable to track number of items that fail.\n",
     "\n",
-    "\"\"\"\n",
-    "Takes a html page and word as a parameter to parse and retrieve the word on the page and phonetics.\n",
-    "\"\"\"\n",
     "def get_word(curr_page, word):\n",
+    "    \"\"\"\n",
+    "    Takes a html page and word as a parameter to parse and retrieve the word on the page and phonetics.\n",
+    "\n",
+    "    :param curr_page: Stored HTML page to parse and scrape\n",
+    "    :param word: The word to scrape from the page\n",
+    "    :type curr_page: HTML\n",
+    "    :type word: str\n",
+    "    :rtype: str\n",
+    "\n",
+    "    return: String formatted as a CSV to\n",
+    "    \"\"\"\n",
     "    # A commonly used sequence of lines in this method to add the word to list of unavailable words\n",
     "    def add_err():\n",
     "        # Write the word to the not_found list\n",
@@ -315,14 +330,25 @@
     "        else:\n",
     "            # If the adding part does succeed, then add word to error list\n",
     "            add_err()\n",
-    "# This method is used to request and process one url at a time\n",
+    "\n",
     "def get_one(url):\n",
+    "    \"\"\"\n",
+    "    This method is used to request and process one url at a time\n",
+    "\n",
+    "    :param url: the url to request\n",
+    "    :rtype: HTTP error handler\n",
+    "    \"\"\"\n",
     "    curr_page = requests.get(url)\n",
     "    get_word(curr_page, url.replace(base_url, \"\"))\n",
     "    return curr_page.raise_for_status()\n",
     "\n",
-    "#   The concurrent method used to retrieve all urls at a maximum rate of 20 requests\n",
     "def get_all(urls):\n",
+    "    \"\"\"\n",
+    "    The concurrent method used to retrieve all urls at a maximum rate of 20 requests\n",
+    "\n",
+    "    :param urls: the list of urls to request\n",
+    "    :type urls: list\n",
+    "    \"\"\"\n",
     "    with concurrent.futures.ThreadPoolExecutor(max_workers=20) as executor:\n",
     "        futures = [executor.submit(get_one, url) for url in urls]\n",
     "\n",
@@ -333,12 +359,15 @@
     "        else:\n",
     "            print('{}: {}'.format(fut.result(), 'OK'))\n",
     "\n",
-    "\"\"\"\n",
-    "This function removes any invalid characters, words, repeat elements, and fixes the formatting of words,\n",
-    "accounts for edge cases, and fixes as much data as it can before writing it to the file or removing the data\n",
-    "completely if it cannot be fixed.\n",
-    "\"\"\"\n",
     "def remove_invalids():\n",
+    "    \"\"\"\n",
+    "    This function removes any invalid characters, words, repeat elements, and fixes the formatting of words,\n",
+    "    accounts for edge cases, and fixes as much data as it can before writing it to the file or removing the data\n",
+    "    completely if it cannot be fixed.\n",
+    "\n",
+    "    :rtype: set\n",
+    "    :return: set of remaining words after all invalid words are removed\n",
+    "    \"\"\"\n",
     "    new_fails = 0 # Number of new elements that are removed\n",
     "    read_file = codecs.open(write_file, \"r\", \"utf-8-sig\") # Retrieve the current phonemes-words list\n",
     "    fix_lines = read_file.read() # Read the file\n",
@@ -403,13 +432,13 @@
     "\n",
     "    for remove in remove_lines:\n",
     "        #For each line that was successfully added, attempt to add it to the 404s list\n",
-    "        try:\n",
+    "        try: # This is a case where both words exist, but for some reason the word is unacceptable\n",
     "            remove_set.add(str(remove[0]) + \",\" + str(remove[1]))\n",
     "            not_found.write(str(remove[1]) + \"\\n\")\n",
     "            print(\"Removed: \" + remove[1])\n",
     "            new_fails += 1\n",
     "        except:\n",
-    "            try:\n",
+    "            try: # If that case fails, there is another case where the second element does not exist\n",
     "                print(remove[0])\n",
     "                remove_set.add(str(remove[0]))\n",
     "                not_found.write(str(remove[0]) + \"\\n\")\n",
@@ -453,14 +482,16 @@
     "    dict_list = list((set(dict_list) - curr_words) - err) # Update the global list of remaining words\n",
     "    return final_set # Return the set of words remaining in the phonemes-words csv\n",
     "\n",
-    "times_phon_was_run = 0 # Numebr of times the phon function was run.\n",
+    "times_phon_was_run = 0 # Number of times the phon function was run.\n",
     "\n",
-    "\n",
-    "\"\"\"\n",
-    "The main key function used to request and process size number of word-phonetics.\n",
-    "This function will only be called once every time \"size\" has been reached.\n",
-    "\"\"\"\n",
     "def phon(size):\n",
+    "    \"\"\"\n",
+    "    The main key function used to request and process size number of word-phonetics.\n",
+    "    This function will only be called once every time \"size\" has been reached.\n",
+    "\n",
+    "    :param size: the number of elements to retrieve phonetics for\n",
+    "    :type size: int\n",
+    "    \"\"\"\n",
     "    # access the global class variables\n",
     "    global new_size\n",
     "    global times_phon_was_run\n",
@@ -492,7 +523,7 @@
     "# Keep repeating the process of getting phoneme_words until all phonetics are reached.\n",
     "while len(fixed_set) < original_size:\n",
     "    phon(original_size - len(fixed_set))\n",
-    "    fixed_set = remove_invalids()\n",
+    "    fixed_set = remove_invalids() # remove invalid phoneme-words and update lists of words\n",
     "\n",
     "\n",
     "# Log the total time the function took to run.\n",
@@ -577,10 +608,13 @@
     "phonemes = ['0', '1']\n",
     "graphemes = ['0', '1']\n",
     "\n",
+    "#Get each phoneme within our data\n",
     "for word in phonemes_col:\n",
     "    for phoneme in word:\n",
     "        if phoneme not in phonemes:\n",
     "            phonemes.append(phoneme)\n",
+    "            \n",
+    "#Get each grapheme within our data\n",
     "for word in graphemes_col:\n",
     "    for grapheme in word:\n",
     "        if grapheme not in graphemes:\n",
