--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -271,8 +271,7 @@
     "        print(\"Failed:\\t\\t\\t\" + str(\"\\t\") + \":\\t\\t\" + word) # Print if the word could not be added\n",
     "\n",
     "    if curr_page.status_code == 404:\n",
-    "        add_err()  #\n",
-    "        # print(\"Error 404\")\n",
+    "        add_err()\n",
     "        # If the page was not valid, try another number combination\n",
     "\n",
     "    else:\n",
@@ -378,7 +377,7 @@
     "    global regex # the regex function written earlier\n",
     "    # Regex to remove common parts of speech accompanying phonetics to be acquired on dictionary.com\n",
     "    re2 = r\"\\n(noun|pronoun|verb|adjective|adverb|preposition|conjunction|interjection)\"\n",
-    "    # print(re.findall(re2, fix_lines)) # Used to debug\n",
+    "    # print(re.findall(re2, fix_lines)) # Can be used to debug/discover all lines that match re2\n",
     "    fix_lines = re.sub(re2, \"\\n\", fix_lines).replace(\"or,\", \",\") # correct the common edge cases\n",
     "    lines = re.sub(regex, \"\", fix_lines).replace(r\"﻿\", \"\").split(\"\\n\") # remove the formatting, split by line\n",
     "\n",
@@ -397,7 +396,6 @@
     "    # Remove each element in drop_lines from the original lines list for processing\n",
     "    for line in drop_lines:\n",
     "        lines.remove(line)\n",
-    "        # print(\"removed: \" + line)\n",
     "\n",
     "\n",
     "    remove_lines = [] # Lines to remove from the current dictionary\n",
@@ -475,10 +473,6 @@
     "    global dict_list, curr_words\n",
     "    # Get the set of the list of words fro from final set\n",
     "    curr_words = set([word.split(\",\")[1] for word in final_set])\n",
-    "    # print(curr_words)\n",
-    "    # updated dict fil\n",
-    "    new_len = set(dict_list) - curr_words # number of words remaining\n",
-    "    # print(str(len(dict_list)) + \",\" + str(len(new_len)) + \",\" + str(len(new_len - err)))\n",
     "    dict_list = list((set(dict_list) - curr_words) - err) # Update the global list of remaining words\n",
     "    return final_set # Return the set of words remaining in the phonemes-words csv\n",
     "\n",
