--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -256,10 +256,15 @@
     "    :type word: str\n",
     "    :rtype: str\n",
     "\n",
-    "    return: String formatted as a CSV to\n",
+    "    :return: string formatted as \"phoneme,word\" for storage as a CSV file\n",
     "    \"\"\"\n",
-    "    # A commonly used sequence of lines in this method to add the word to list of unavailable words\n",
+    "\n",
     "    def add_err():\n",
+    "        \"\"\"\n",
+    "        # A commonly used sequence of lines in this method to add the word to list of unavailable words\n",
+    "\n",
+    "        :return:\n",
+    "        \"\"\"\n",
     "        # Write the word to the not_found list\n",
     "        not_found = codecs.open(err_filename, \"a\")\n",
     "        not_found.write(word + \"\\n\")\n",
@@ -332,7 +337,7 @@
     "\n",
     "def get_one(url):\n",
     "    \"\"\"\n",
-    "    This method is used to request and process one url at a time\n",
+    "    Request and process one url at a time\n",
     "\n",
     "    :param url: the url to request\n",
     "    :rtype: HTTP error handler\n",
@@ -343,7 +348,7 @@
     "\n",
     "def get_all(urls):\n",
     "    \"\"\"\n",
-    "    The concurrent method used to retrieve all urls at a maximum rate of 20 requests\n",
+    "    Concurrent method used to retrieve all urls at a maximum rate of 20 requests\n",
     "\n",
     "    :param urls: the list of urls to request\n",
     "    :type urls: list\n",
@@ -425,7 +430,6 @@
     "\n",
     "    remove_set = set() # Set of items to be removed\n",
     "    remove_lines = remove_lines[:len(remove_lines) - 1] # Removes the empty set.\n",
-    "\n",
     "    not_found = codecs.open(err_filename, \"a\") # Add all not found elements to the list of error 404s.\n",
     "\n",
     "    for remove in remove_lines:\n",
@@ -435,12 +439,14 @@
     "            not_found.write(str(remove[1]) + \"\\n\")\n",
     "            print(\"Removed: \" + remove[1])\n",
     "            new_fails += 1\n",
+    "\n",
     "        except:\n",
     "            try: # If that case fails, there is another case where the second element does not exist\n",
     "                print(remove[0])\n",
     "                remove_set.add(str(remove[0]))\n",
     "                not_found.write(str(remove[0]) + \"\\n\")\n",
     "                new_fails += 1\n",
+    "\n",
     "            except:\n",
     "                # If this term's formatting is bad, print this did not work and add it to the list of 404s.\n",
     "                print(\"This did not work\")\n",
@@ -640,32 +646,54 @@
    "outputs": [],
    "source": [
     "def nemes_to_1_hot_seq(string, nemes=\"phonemes\"):\n",
-    "    \"\"\"one hot encodes the word according to either\n",
-    "    the phoneme or grapheme list\n",
-    "        ::returns:: pytorch tensor of one hot encoded characters\n",
+    "    \"\"\"\n",
+    "    One hot encodes the word according to either the phoneme or grapheme list\n",
+    "\n",
+    "    :returns: pytorch tensor of one hot encoded characters\n",
     "    \"\"\"\n",
     "    string = '0' + string + '1'\n",
-    "    l = phonemes if nemes == \"phonemes\" else graphemes\n",
+    "    list = phonemes if nemes == \"phonemes\" else graphemes\n",
     "    seq = []\n",
+    "\n",
     "    for i in string:\n",
-    "        vec = [0] * len(l)\n",
-    "        vec[l.index(i)] = 1\n",
+    "        vec = [0] * len(list)\n",
+    "        vec[list.index(i)] = 1\n",
     "        seq.append(vec)\n",
     "\n",
     "    return torch.FloatTensor([seq])\n",
     "\n",
-    "def one_hot_to_nemes(arr, nemes=\"phonemes\"):\n",
-    "    \"\"\"converts a 1-hot encoding back to characters\"\"\"\n",
+    "def one_hot_to_nemes(one_hot, nemes=\"phonemes\"):\n",
+    "    \"\"\"\n",
+    "    Converts a 1-hot encoding back to characters\n",
+    "\n",
+    "    :param arr: of one hot encoded characters\n",
+    "    :param nemes:\n",
+    "\n",
+    "    :return: sequence of characters\n",
+    "    \"\"\"\n",
     "    seq = []\n",
-    "    l = phonemes if nemes == \"phonemes\" else graphemes\n",
-    "    for hot in arr:\n",
+    "    list = phonemes if nemes == \"phonemes\" else graphemes\n",
+    "\n",
+    "\n",
+    "    for hot in one_hot:\n",
     "        x = torch.argmax(hot)\n",
-    "        seq.append(l[x])\n",
+    "        seq.append(list[x])\n",
     "    return seq\n",
     "\n",
     "class P2GDataset(Dataset):\n",
-    "    \"\"\"Pytorch dataset object for sampling the dataset\"\"\"\n",
+    "    \"\"\"\n",
+    "    Pytorch dataset object for sampling the dataset\n",
+    "    \"\"\"\n",
+    "\n",
+    "\n",
     "    def __init__(self, phoneme_file, device):\n",
+    "        \"\"\"\n",
+    "        :param phoneme_file: Name of the file where the phonemes are stored\n",
+    "        :param device: Whether P2G will be run on cpu or gpu\n",
+    "\n",
+    "        :type phoneme_file: str\n",
+    "        :type device: str\n",
+    "        \"\"\"\n",
     "        df = pd.read_csv(phoneme_file)\n",
     "        self.data = df\n",
     "        self.device = device\n",
@@ -674,6 +702,13 @@
     "        return len(self.data)\n",
     "\n",
     "    def __getitem__(self, idx):\n",
+    "        \"\"\"\n",
+    "        Retrieves an item at index idx\n",
+    "\n",
+    "        :param idx: index of item to get\n",
+    "        :return: phonemes one_hot encoded run on device, graphemes one hot encoded run using long\n",
+    "        \"\"\"\n",
+    "\n",
     "        p, g = self.data.iloc[idx]\n",
     "        # 1-hot encoding\n",
     "        return nemes_to_1_hot_seq(p, nemes = \"phonemes\").to(self.device), nemes_to_1_hot_seq(g, nemes = \"graphemes\").long()\n"
@@ -830,8 +865,8 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "dataset = P2GDataset(\"phonemes-words.csv\", device)\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\" # Whether to run on cuda or cpu\n",
+    "dataset = P2GDataset(\"phonemes-words.csv\", device) # initialize our dataset to be run on \"device\"\n",
     "print(\"Size of dataset: \" + str(len(dataset)))\n",
     "dataset.data.head(15)"
    ]
@@ -862,17 +897,21 @@
     }
    ],
    "source": [
-    "# calculate # of words of different lengths\n",
+    "# calculate the frequency of words within our dataset that have each existing word length\n",
     "dict = {}\n",
     "for index in range(len(dataset.data)):\n",
-    "    p, g = dataset.data.iloc[index]\n",
-    "    if len(g) in dict:\n",
-    "        dict[len(g)] += 1\n",
+    "    phnme, grphme = dataset.data.iloc[index]\n",
+    "\n",
+    "    if len(grphme) in dict:\n",
+    "        dict[len(grphme)] += 1\n",
     "    else:\n",
-    "        dict[len(g)] = 1\n",
+    "        dict[len(grphme)] = 1\n",
+    "\n",
     "Y = []\n",
-    "for ele in dict.keys():\n",
+    "for char in dict.keys():\n",
     "    Y.append(dict[ele])\n",
+    "\n",
+    "# Plot the distribution of word lengths as a frequency plot.\n",
     "X = dict.keys()\n",
     "fig = plt.figure()\n",
     "plt.bar(X, Y, 0.4, color=\"green\")\n",
@@ -902,25 +941,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculate the distribution of letters (graphemes)\n",
+    "# Calculate the percentage distribution of letters (graphemes)\n",
     "dict = {}\n",
     "for index in range(len(dataset.data)):\n",
-    "    p, g = dataset.data.iloc[index]\n",
-    "    lowString = g.lower()\n",
+    "    phnme, grphme = dataset.data.iloc[index]\n",
+    "    lowString = grphme.lower()\n",
+    "\n",
+    "    # Increment frequency of character by one\n",
     "    for char in lowString:\n",
     "        if char in dict:\n",
     "            dict[char] += 1\n",
+    "        # Add the character to the list and initialize as 1\n",
     "        else:\n",
     "            dict[char] = 1\n",
+    "\n",
     "Y = []\n",
+    "# Calculate the percent for each element\n",
     "for ele in dict.keys():\n",
     "    Y.append(dict[ele]/len(dataset.data))\n",
     "\n",
+    "# Plot each element using the original dict keys as the X value and the Y as the percentage per character.\n",
     "X = dict.keys()\n",
     "fig = plt.figure()\n",
     "plt.bar(sorted(X), Y, 0.4, color=\"green\")\n",
     "plt.xlabel(\"letter\")\n",
-    "plt.ylabel(\"Average Number of Cccurrences in a Word\")\n",
+    "plt.ylabel(\"Average Number of Occurrences in a Word\")\n",
     "plt.title(\"\")\n",
     "plt.show()"
    ]
@@ -929,7 +974,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This chart shows the average amount of each letter in words in the dataset. No letter occurs more than once on average, but \"g\" is quite close. We would not expect any letters to occur more than once on average considering that the average word length is 8, but there are 26 grapheme characters. The surplus of \"g\"s is surprising and the unequal distribution of letters may lead to the model overpredicting \"g\"s. \"h\" occurs frequently, but \"f\" does not, so perhaps we will see strange spellings of the \"f\" sound, such as the well known example of \"fish\" being spelled as \"ghoti\" (\"gh\" produces the f sound as in laugh, \"o\" produces the \"ih\" sound as in women, and \"ti\" produces the shh sound as in potion). 🙂"
+    "This chart shows the average amount of each letter in words in the dataset. No letter occurs more than once on\n",
+    "average,  but \"g\" is quite close. We would not expect any letters to occur more than once on average considering that\n",
+    "the average word length is 8, but there are 26 grapheme characters. The surplus of \"g\"s is surprising and the unequal\n",
+    "distribution of letters may lead to the model overpredicting \"g\"s. \"h\" occurs frequently, but \"f\" does not, so\n",
+    " perhaps we will see strange spellings of the \"f\" sound, such as the well known example of \"fish\" being spelled as\n",
+    " \"ghoti\" (\"gh\" produces the f sound as in laugh, \"o\" produces the \"ih\" sound as in women, and \"ti\" produces the shh  \n",
+    " sound as in potion). 🙂"
    ]
   },
   {
@@ -19136,10 +19187,7 @@
     "dict_list = dict_file.split(\"\\n\")\n",
     "\n",
     "a_dict = set(codecs.open(\"words_alpha.txt\", \"r\", \"utf-8-sig\").read().replace(\"\\r\", \"\").split(\"\\n\"))\n",
-    "\n",
     "err = set(codecs.open(err_filename, \"r\", \"utf-8-sig\").read().replace(\"\\r\", \"\").split(\"\\n\"))\n",
-    "\n",
-    "new_dict_set = list(a_dict - err)  # Subtract the set of errors from the beta dictionary\n",
     "\n",
     "spellcheck = SpellChecker().correction\n",
     "\n",
@@ -19174,11 +19222,6 @@
     "            correct+=1\n",
     "    return correct / len(trues)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
