--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -979,7 +979,7 @@
     "the average word length is 8, but there are 26 grapheme characters. The surplus of \"g\"s is surprising and the unequal\n",
     "distribution of letters may lead to the model overpredicting \"g\"s. \"h\" occurs frequently, but \"f\" does not, so\n",
     " perhaps we will see strange spellings of the \"f\" sound, such as the well known example of \"fish\" being spelled as\n",
-    " \"ghoti\" (\"gh\" produces the f sound as in laugh, \"o\" produces the \"ih\" sound as in women, and \"ti\" produces the shh  \n",
+    " \"ghoti\" (\"gh\" produces the f sound as in laugh, \"o\" produces the \"ih\" sound as in women, and \"ti\" produces the shh\n",
     " sound as in potion). 🙂"
    ]
   },
@@ -1032,21 +1032,30 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.encoder = nn.GRU(len(phonemes), layer_size, 2, batch_first=True, bidirectional=True, dropout=0.5)\n",
+    "        # Set up the encoder's fully connected (fc) variable as a sequential neural network\n",
     "        self.fc = nn.Sequential(\n",
-    "            # takes final forwards and backwards hidden states\n",
+    "            # takes final forwards and backwards hidden states as parameters\n",
     "            nn.Linear(2 * layer_size, layer_size),\n",
     "            nn.Tanh()\n",
     "        )\n",
     "\n",
-    "    def forward(self, x):\n",
-    "        # push vector through encoder\n",
-    "        out, hidden = self.encoder(x)\n",
+    "    def forward(self, vector):\n",
+    "        \"\"\"\n",
+    "        Push vector through encoder\n",
+    "\n",
+    "        :param vector:\n",
+    "        :return out, hidden_for_init: context vector\n",
+    "        \"\"\"\n",
+    "        # out is the output of the encoder neural network\n",
     "        # hidden is [4, 1, layer_size]\n",
     "        # this is because of bidirectionality * double stacked\n",
+    "        out, hidden = self.encoder(vector)\n",
+    "\n",
     "        # we want to grab the \"highest\" layers from the forwards and backwards directions\n",
     "        # dim 1 because hidden[3] and hidden[4] are both [1, layer_size] and we\n",
     "        # want a single batch that has 2*layer_size values\n",
     "        hc = torch.cat((hidden[2], hidden[3]), dim=1)\n",
+    "        # pass the hidden concatenated (hc) layers to the fully connected neural network\n",
     "        hidden_for_init = self.fc(hc)\n",
     "\n",
     "        # return context vector\n",
@@ -1064,33 +1073,39 @@
     "        self.attention = nn.Linear(layer_size, 1, bias=False)\n",
     "\n",
     "    def forward(self, encoder_hiddens, decoder_hidden):\n",
-    "        # encoder_hiddens is [1, L, layer_size*2] bc bidirectional\n",
-    "        # decoder_hidden is [1, layer_size]\n",
+    "        \"\"\"\n",
+    "        Feed forward neural network\n",
+    "\n",
+    "        :param encoder_hiddens: is [1, L, layer_size*2] because it is bidirectional\n",
+    "        :param decoder_hidden:is [1, layer_size]\n",
+    "        :return:\n",
+    "        \"\"\"\n",
+    "\n",
     "        # 1 bc using batch first\n",
     "        num_encoder_hiddens = encoder_hiddens.shape[1]\n",
-    "\n",
     "        # make it [1,1,layer_size]\n",
     "        decoder_hidden = torch.unsqueeze(decoder_hidden, 0)\n",
-    "\n",
     "        # repeat along second dim to get [4, 1, layer_size]\n",
-    "\n",
     "        decoder_hiddens = decoder_hidden.squeeze(0).repeat(1, num_encoder_hiddens, 1)\n",
     "\n",
     "        inputs = torch.cat((encoder_hiddens, decoder_hiddens), 2)\n",
-    "\n",
     "        energy = self.energy(inputs)\n",
-    "\n",
     "        attention = self.attention(energy)\n",
     "\n",
-    "        # want a distribution of attention that sums to 1\n",
+    "        # we want a distribution of attention that sums to 1, so we use the nn.functional softmax function\n",
     "        return F.softmax(attention, dim=2)\n",
     "\n",
     "class Decoder(nn.Module):\n",
     "    def __init__(self, attention):\n",
+    "        \"\"\"\n",
+    "\n",
+    "        :param attention:\n",
+    "        \"\"\"\n",
     "        super().__init__()\n",
     "        self.attention = attention\n",
     "        # decoder GRU takes in previous output word, attention vector, current hidden state\n",
     "        self.decoder = nn.GRU(len(graphemes) + 2*layer_size, layer_size, batch_first=True)\n",
+    "\n",
     "        self.fc = nn.Sequential(\n",
     "            nn.Linear(layer_size*3 + len(graphemes), len(graphemes))\n",
     "        )\n",
@@ -1100,15 +1115,19 @@
     "        Since this function gets called once at a time rather than taking in\n",
     "        a sequence of vectors, we need to pass it the last output. This will be just\n",
     "        a vector of numbers that can be converted to the embedding representing that last output\n",
+    "\n",
+    "        :param input: vector of numbers that can be converted to the embedding representing that last output\n",
+    "        :param hidden_layer: [1,1,layer_size]\n",
+    "        :param encoder_hiddens: [1,L,layer_size]\n",
+    "        :return:\n",
     "        \"\"\"\n",
-    "        # [1,1,layer_size]\n",
     "        attention_vals = self.attention(encoder_hiddens, hidden_layer)\n",
     "        attention_vals = attention_vals.permute(0, 2, 1)\n",
     "\n",
-    "        # encoder_hiddens [1,L,layer_size]\n",
-    "        # this just multiplies each attention value against the appropriate vector\n",
     "        # and sums the weighted vectors\n",
     "        # will be [1, 1, layer_size]\n",
+    "        # bmm multiplies matrix-matrix products, which multiplies each attention value against the appropriate vector\n",
+    "        # and sums the weighted vectors\n",
     "        attended = torch.bmm(attention_vals, encoder_hiddens)\n",
     "        input = torch.cat((attended, input), dim=2)\n",
     "        out, hidden = self.decoder(input, hidden_layer)\n",
@@ -1118,7 +1137,10 @@
     "        return self.fc(input_for_fc), hidden\n",
     "\n",
     "class seq2seq(nn.Module):\n",
-    "    \"\"\"The seq2seq model itself\"\"\"\n",
+    "    \"\"\"\n",
+    "\n",
+    "    The seq2seq model itself\n",
+    "    \"\"\"\n",
     "    def __init__(self, device):\n",
     "        super().__init__()\n",
     "        # instantiate encoder and decoder with attention\n",
@@ -1128,6 +1150,10 @@
     "\n",
     "    def forward(self, in_seq, out_seq, tf_ratio=0.5):\n",
     "        \"\"\"\n",
+    "\n",
+    "\n",
+    "        :param in_seq:\n",
+    "        :param out_seq:\n",
     "        :param tf_ratio: is the teacher forcing ratio. It decides how frequently\n",
     "        the model receives its own previously predicted token as opposed to the\n",
     "        known correct token.\n",
@@ -1160,24 +1186,33 @@
     "        return outputs\n",
     "\n",
     "    def pred_new(self, in_seq):\n",
-    "        \"\"\"Method to predict the output sequence for a previously unseen\n",
+    "        \"\"\"\n",
+    "        Method to predict the output sequence for a previously unseen\n",
     "        input sequence. The main difference between this function and forward\n",
-    "        is that this function only stops decoding when the model produces and\n",
-    "        end token\n",
+    "        is that this function only stops decoding when the model produces an\n",
+    "        end token.\n",
+    "\n",
+    "        :param in_seq:\n",
+    "        :return: decoded outputs from the neural network\n",
     "        \"\"\"\n",
     "        encoder_out_for_at, hidden = self.encoder(in_seq)\n",
     "        hidden = hidden.unsqueeze(0)\n",
     "        input = torch.zeros(1, 1, len(graphemes)).to(self.device)\n",
     "        outs = []\n",
+    "\n",
     "        while True:\n",
     "            out, hidden = self.decoder(input, hidden, encoder_out_for_at)\n",
     "            outs.append(out)\n",
+    "\n",
     "            # in case not hitting end token\n",
     "            if len(outs) > 50:\n",
     "                break\n",
+    "\n",
     "            x = input.argmax(1)[0]\n",
     "            input = torch.zeros(1, 1, len(graphemes)).to(self.device)\n",
     "            input[0][0][x] = 1\n",
+    "\n",
+    "            # end token used to stop decoding the model\n",
     "            if one_hot_to_nemes(out) == ['1']:\n",
     "                break\n",
     "        return outs"
@@ -1240,7 +1275,7 @@
    "source": [
     "# initialize optimizer/loss func/hyperparams\n",
     "EPOCHS = 15\n",
-    "model = seq2seq(device).to(device)\n",
+    "model = seq2seq(device).to(device) # Model used to train on the data.\n",
     "# what a beautiful architecture\n",
     "print(\"Model architecture \", model)\n",
     "\n",
@@ -1253,8 +1288,15 @@
     "print(\"test size \", len(test))\n",
     "\n",
     "def get_0_1_accuracy(test_set, model, print=True):\n",
-    "    \"\"\"method to compute (1 - WER) accuracy AKA what % of test_set does model get\n",
-    "    exactly correct.\"\"\"\n",
+    "    \"\"\"\n",
+    "    method to compute (1 - WER) accuracy AKA what % of test_set does model get\n",
+    "    exactly correct.\n",
+    "\n",
+    "    :param test_set: set of phoneme-words used to predict word accuracy\n",
+    "    :param model:\n",
+    "    :param print:\n",
+    "    :return:\n",
+    "    \"\"\"\n",
     "    correct = 0\n",
     "    dataloader = DataLoader(dataset=test_set, batch_size=1)\n",
     "    for (in_seq, out_seq) in dataloader:\n",
@@ -1266,33 +1308,42 @@
     "\n",
     "        if true == pred:\n",
     "            correct+= 1\n",
+    "\n",
     "    if correct == 0:\n",
     "        return correct\n",
     "    return correct/len(test_set)\n",
     "\n",
     "def gen_accuracy_plot (real, pred, title):\n",
-    "    \"\"\"generates and displays a plot of performance on\n",
-    "    different lengths of words\n",
     "    \"\"\"\n",
+    "    Gnerates and displays a plot of performance on\n",
+    "    different lengths of words\n",
+    "\n",
+    "    :param real: The actual correct word\n",
+    "    :param pred: The predicted correct word\n",
+    "    :param title: Title of the plot\n",
+    "    :return:\n",
+    "    \"\"\"\n",
+    "\n",
     "    accuracy = {}\n",
     "    dict = {}\n",
     "\n",
     "    for i in range(len(real)): # (iterate through all elements in real)\n",
-    "        if real[i] == pred[i]: # If the elements match\n",
+    "        if real[i] == pred[i]: # If the elements match then\n",
     "           if len(real[i]) in accuracy: # if the length of the element is in dictionary \"accuracy\"\n",
     "               accuracy[len(real[i])] += 1 # add 1 to the length of the element\n",
     "           else:\n",
     "               accuracy[len(real[i])] = 1 # otherwise add the length as a new element starting from 1\n",
-    "        else: # if the real element does not match\n",
+    "        else: # if the real element does not match then\n",
     "            if len(real[i]) not in accuracy: # If the length of the real element is not in accuracy\n",
     "                accuracy[len(real[i])] = 0 # add the length as a new element starting from 0\n",
     "\n",
-    "        if len(real[i]) in dict:  #if the length is already in dictionary, \"dict\"\n",
-    "            dict[len(real[i])] += 1 # add one \n",
+    "        if len(real[i]) in dict:  # if the length is already in dictionary, \"dict\"\n",
+    "            dict[len(real[i])] += 1 # add one to that length\n",
     "        else:\n",
     "            dict[len(real[i])] = 1 # otherwise add a new element for that length beginning from one\n",
     "    X = dict.keys() # get all of the total elements with each length\n",
-    "    Y = [] \n",
+    "    Y = []\n",
+    "\n",
     "    for i in X: # add each total correct element as a float to the list Y and divide by the total number of elements for that length\n",
     "        Y.append(1.0*accuracy[i]/dict[i]) \n",
     "    plt.bar(X, Y, 0.4, color=\"green\")\n",
@@ -19145,7 +19196,14 @@
    "outputs": [],
    "source": [
     "def get_true_pred_lists(test_set, model):\n",
-    "    \"\"\"Returns a list of correct outputs and a corresponding list of model predictions\"\"\"\n",
+    "    \"\"\"\n",
+    "    Returns a list of correct outputs and a corresponding list of model predictions\n",
+    "\n",
+    "    :param test_set:\n",
+    "    :param model:\n",
+    "    :return:\n",
+    "    \"\"\"\n",
+    "\n",
     "    trues = []\n",
     "    preds = []\n",
     "    dataloader = DataLoader(dataset=test_set, batch_size=1)\n",
@@ -19193,6 +19251,11 @@
     "\n",
     "# Only spell check incorrect strings\n",
     "def spellcheck_1(string):\n",
+    "    \"\"\"\n",
+    "\n",
+    "    :param string:\n",
+    "    :return:\n",
+    "    \"\"\"\n",
     "    spellchecked = string\n",
     "\n",
     "    # Check if the presented string is in the list of known words\n",
@@ -19205,6 +19268,11 @@
     "trues, preds = get_true_pred_lists(test, model)\n",
     "\n",
     "def spellcheck_all(str_list):\n",
+    "    \"\"\"\n",
+    "\n",
+    "    :param str_list:\n",
+    "    :return:\n",
+    "    \"\"\"\n",
     "    new_list = [None] * len(str_list)\n",
     "    str_list = list(str_list)\n",
     "\n",
