Updated documentation, currently writing concluding remarks

--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -19367,7 +19367,13 @@
    "source": [
     "Yay! we got a +10% accuracy boost using spellcheck.\n",
     "\n",
-    "We hope you enjoyed this journey through the highs and lows of data collection and model training 🙂."
+    "We hope you enjoyed this journey through the highs and lows of data collection and model training 🙂.\n",
+    "\n",
+    "## Concluding Remarks\n",
+    "With our limited resources, we were able to achieve a total phoneme to grapheme prediction accuracy of 60%. With more\n",
+    " time, research, computation power, and data we believe we can significantly increase the prediction accuracy. However,\n",
+    " with our current system and limited time, we are already able to predict more than half of words we found that are\n",
+    " not contained within our dataset."
    ]
   },
   {
