--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -195,7 +195,12 @@
     "collapsed": false
    },
    "source": [
-    "### Declare key functions and then run the code to acquire the phonetics efficiently"
+    "### Declare key functions and then run the code to acquire the phonetics efficiently\n",
+    "This section consists of several key functions, get_urls, get_word, get_one, and get_all. These functions are the\n",
+    "functions that allow users to retrieve information from various dictionary sites. get_urls retrieves (size) random\n",
+    "words from the word list and converts them into the appropriate url. Get all requests URLs concurrently by\n",
+    "using multithreading to call get_one. Get one requests one webpage from urls and is processed by get_word, which\n",
+    "retrieves the correct word and its respective phonetics."
    ]
   },
   {
@@ -361,8 +366,30 @@
     "        if fut.exception() is not None:\n",
     "            print('{}: {}'.format(fut.exception(), 'ERR'))\n",
     "        else:\n",
-    "            print('{}: {}'.format(fut.result(), 'OK'))\n",
-    "\n",
+    "            print('{}: {}'.format(fut.result(), 'OK'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Clean the Data\n",
+    "This is one of the most important functions in the data gathering phase. Without clean data, the model would not be\n",
+    "able to give accurate predictions. Remove invalids is the result of many iterations and reviews of thousands of words\n",
+    " to find edge cases and account for them in the code. We remove various symbols, phrases, and filter out by\n",
+    " phoneme-word letter difference to create a hard margin that will almost always produce accurate data."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "def remove_invalids():\n",
     "    \"\"\"\n",
     "    This function removes any invalid characters, words, repeat elements, and fixes the formatting of words,\n",
@@ -482,8 +509,38 @@
     "    dict_list = list((set(dict_list) - curr_words) - err) # Update the global list of remaining words\n",
     "    return final_set # Return the set of words remaining in the phonemes-words csv\n",
     "\n",
-    "times_phon_was_run = 0 # Number of times the phon function was run.\n",
-    "\n",
+    "times_phon_was_run = 0 # Number of times the phon function was run."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Execute the main function\n",
+    "Before starting to acquire data we always want to make sure that we have all data needed in the correct form, so we\n",
+    "run\n",
+    "\"remove invalids\" before acquiring any new data. Then we acquire as much data as we need to reach \"original size\"\n",
+    "phon is the main function used to acquire new phonetics and consists of the functions above. Phon allows you to\n",
+    "acquire data in \"groups\" of size \"group_size\" which will run remove_invalids() every time group size is reached to\n",
+    "eliminate the likelihood that data that was acquired is repeated through random calls."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "def phon(size):\n",
     "    \"\"\"\n",
     "    The main key function used to request and process size number of word-phonetics.\n",
@@ -554,7 +611,13 @@
     "# Close out the file\n",
     "b_write.close()\n",
     "err_write.close()"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -19373,7 +19436,15 @@
     "With our limited resources, we were able to achieve a total phoneme to grapheme prediction accuracy of 60%. With more\n",
     " time, research, computation power, and data we believe we can significantly increase the prediction accuracy. However,\n",
     " with our current system and limited time, we are already able to predict more than half of words we found that are\n",
-    " not contained within our dataset."
+    " not contained within our dataset. In the future, we would like to acquire more data and standardize our phonetics\n",
+    " acquired from multiple dictionaries to create a massive library to train our model on. We expect this to increase\n",
+    " the overall accuracy of this for use with future word prediction models.\n",
+    " <br>\n",
+    "Our model is standardized in such a way that a similar method could be used to predict words in systems that also use\n",
+    " similar phonetics. This would allow for researchers around the world to use our system, replace the dictionary with\n",
+    " a local dictionary, and  produce similar results with minimal changes to the code. After we have increased the\n",
+    " accuracy, we plan to map spoken pronunciations to their respective phonemes to apply this technique to more\n",
+    " accurately generate words that do not exist in a system's database."
    ]
   },
   {
