--- a/Phoneme to Grapheme CMSC320 Final Project.ipynb
+++ b/Phoneme to Grapheme CMSC320 Final Project.ipynb
@@ -6,7 +6,7 @@
     "collapsed": false
    },
    "source": [
-    "## <center>Attention Isn't Quite All You Need: Building a Phoneme to Grapheme (P2G) Recurrent Generative Conversion Model from Scratch with GRUs, Attention, and a Little Bit of Subterfuge </center>\n",
+    "## <center>Attention Isn't Quite All You Need: Building a SOTA Phoneme to Grapheme (P2G) Recurrent Generative Conversion Model from Scratch with GRUs, Attention, and a Little Bit of Subterfuge </center>\n",
     "### <center> Sander Schulhoff, Ryan Brown, Xinyi Liu </center>\n",
     "\n",
     "<center><img src=\"gg.jpg\" alt=\"drawing\" width=\"600\"/></center>\n",
@@ -195,7 +195,12 @@
     "collapsed": false
    },
    "source": [
-    "### Declare key functions and then run the code to acquire the phonetics efficiently"
+    "### Declare key functions and then run the code to acquire the phonetics efficiently\n",
+    "This section consists of several key functions, get_urls, get_word, get_one, and get_all. These functions are the\n",
+    "functions that allow users to retrieve information from various dictionary sites. get_urls retrieves (size) random\n",
+    "words from the word list and converts them into the appropriate url. Get all requests URLs concurrently by\n",
+    "using multithreading to call get_one. Get one requests one webpage from urls and is processed by get_word, which\n",
+    "retrieves the correct word and its respective phonetics."
    ]
   },
   {
@@ -19212,8 +19217,8 @@
     "# turn dropout off\n",
     "model.eval()\n",
     "\n",
-    "with torch.no_grad():\n",
-    "    print(\"Test accuracy: \" + str(get_0_1_accuracy(test, model)))"
+    "# with torch.no_grad():\n",
+    "    # print(\"Test accuracy: \" + str(get_0_1_accuracy(test, model)))"
    ]
   },
   {
@@ -19428,10 +19433,19 @@
     "We hope you enjoyed this journey through the highs and lows of data collection and model training 🙂.\n",
     "\n",
     "## Concluding Remarks\n",
-    "With our limited resources, we were able to achieve a total phoneme to grapheme prediction accuracy of 60%. With more\n",
+    "With our limited resources, we were able to achieve a total phoneme to grapheme prediction accuracy of 70%. With more\n",
     " time, research, computation power, and data we believe we can significantly increase the prediction accuracy. However,\n",
-    " with our current system and limited time, we are already able to predict more than half of words we found that are\n",
-    " not contained within our dataset."
+    " with our current system and limited time, we are already able to predict more than two-thirds of words we found that\n",
+    "  are\n",
+    " not contained within our dataset. In the future, we would like to acquire more data and standardize our phonetics\n",
+    " acquired from multiple dictionaries to create a massive library to train our model on. We expect this to increase\n",
+    " the overall accuracy of this for use with future word prediction models.\n",
+    " <br>\n",
+    "Our model is standardized in such a way that a similar method could be used to predict words in systems that also use\n",
+    " similar phonetics. This would allow for researchers around the world to use our system, replace the dictionary with\n",
+    " a local dictionary, and  produce similar results with minimal changes to the code. After we have increased the\n",
+    " accuracy, we plan to map spoken pronunciations to their respective phonemes to apply this technique to more\n",
+    " accurately generate words that do not exist in a system's database."
    ]
   },
   {
